Some changes, fixs etc.

--- a/pom.xml
+++ b/pom.xml
@@ -78,10 +78,14 @@
 
     <modules>
         <module>MC-Rtp</module>
+
         <module>MC-Tools</module>
+
         <module>MC-Vanish</module>
 
         <module>MC-Wallet</module>
+
+        <module>MC-Whitelist</module>
     </modules>
 
 
