Added Placeholder expansion for MC-Wallet, some changes/fixes etc...

--- a/MC-Wallet/src/main/resources/plugin.yml
+++ b/MC-Wallet/src/main/resources/plugin.yml
@@ -1,5 +1,7 @@
-name: KWallet
-version: 1.0
 main: pl.nehorowo.wallet.WalletPlugin
+name: KWallet
 author: nehorowo
+version: 1.1-SNAPSHOT
 api-version: 1.13
+depend:
+  - PlaceholderAPI
